
[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

## NOTES ##
# Building through VSCode uses override in .vscode/settings.json
###########

# References
#   Blog: https://os.phil-opp.com/

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.23"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
volatile = "0.2.6"

# cargo +nightly bootimage -Zbuild-std=core,compiler_builtins --target x86_64-blog_os.json

# to build: cargo bootimage -Zbuild-std --target x86_64-blog_os.json
# to boot: qemu-system-x86_64 -drive format=raw,file=target/x86_64-blog_os/debug/bootimage-blog_os.bin